vortex-btrblocks/tests/snapshots/golden__compact__float_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: f64, len=16384, nbytes=131072
root: vortex.dict(f64, len=16384) nbytes=6184
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=6144
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 384i64
  values: vortex.alp(f64, len=8) nbytes=40
    metadata: exponents: e: 16, f: 11
    encoded: vortex.pco(i64, len=8) nbytes=40
      metadata: ptype: i64, nrows: 8, slice: 0..8
