vortex-btrblocks/tests/snapshots/golden__compact__int_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: i64, len=16384, nbytes=131072
root: vortex.dict(i64, len=16384) nbytes=6177
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=6144
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 384i64
  values: vortex.pco(i64, len=6) nbytes=33
    metadata: ptype: i64, nrows: 6, slice: 0..6
